--- a/compose.yml
+++ b/compose.yml
@@ -29,20 +29,20 @@ services:
       interval: 30s
       timeout: 5s
       retries: 10
-  # app:
-  #   build:
-  #     context: ./apps/one
-  #     dockerfile: Dockerfile
-  #   container_name: one_app
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - ${PORT_BACKEND}:8000
-  #   depends_on:
-  #     - db
-  #     - redis
-  #   networks:
-  #     - app-one
+  app:
+    build:
+      context: ./apps/one
+      dockerfile: Dockerfile
+    container_name: one_app
+    env_file:
+      - .env
+    ports:
+      - ${PORT_BACKEND}:${PORT_BACKEND}
+    depends_on:
+      - db
+      - redis
+    networks:
+      - app-one
   # prometheus:
   #   image: prom/prometheus:latest
   #   container_name: prometheus
@@ -71,5 +71,4 @@ volumes:
 
 networks:
   app-one:
-    external: true
     driver: bridge
