--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@one/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
   "dependencies": {
     "@keyv/redis": "^5.0.0",
@@ -17,6 +16,7 @@
     "better-auth": "^1.2.12",
     "cache-manager": "^7.0.1",
     "cacheable": "^1.10.2",
+    "dotenv-cli": "^8.0.0",
     "keyv": "^5.4.0",
     "prisma": "^6.12.0",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +37,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "~18.16.9",
+    "copy-webpack-plugin": "^13.0.0",
     "nx": "21.3.0",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
